<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="702dp"
    android:paddingTop="15dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="28dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_add_contact_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/formulario_de_contacto"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/descripcion_formulario" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_form"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_ed"
                android:inputType="text"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellido_form"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellido_ed"
                android:inputType="text"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono_form"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".60"
                    android:hint="@string/email_ed"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/sp_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".40" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_form"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_telefono"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".60"
                    android:hint="@string/telefono_ed"
                    android:inputType="phone"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/sp_telefono"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".40" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion_form"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion_ed"
                android:inputType="text"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechnac_form"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_fechnac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_nacimiento"
                android:inputType="date"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_continuar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Continuar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>